--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="bg_downloader_pause">Pause</string>
     <string name="bg_downloader_cancel">Cancel</string>
+    <string name="bg_downloader_notification_channel_name">Downloads</string>
+    <string name="bg_downloader_notification_channel_description">Updates on downloads and
+        uploads in progress</string>
 </resources>
